--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "browser-sync": "^2.27.5",
     "lazysizes": "^5.3.0",
     "lodash": "^4.17.20",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "svg-react-loader": "^0.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
