--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lazysizes": "^5.3.0",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
-    "svg-react-loader": "^0.4.6"
+    "svg-react-loader": "^0.4.6",
+    "swiper": "^8.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
